Footer Align fix

--- a/index.css
+++ b/index.css
@@ -26,8 +26,6 @@ main {
 footer {
     flex-shrink: 0;
     position: absolute;
-    left: 0;
-    right: 0;
     height: 25px;
     bottom: calc(env(safe-area-inset-bottom) + 10px);
     padding: 1rem 2rem;
